# how-to-parse

./: .gitignore  Cargo.toml  LICENSE  README.md  script.sh  test.scala
src/: event.rs  event_listener.rs  event_parser.rs  event_push_parser.rs  event_to_tree.rs  input_gen.rs  lexgen_event_parser.rs  lib.rs  listener_impl.rs  push_to_events.rs  simple_ast.rs  simple_parser.rs  test_common.rs  timestamp_parser.rs
